# simd_sorting

./: .gitignore  CMakeLists.txt
bench_arm_double_2/: config.txt  result.csv
bench_arm_double_4/: config.txt  result.csv
bench_arm_int64_2/: config.txt  result.csv
bench_arm_int64_4/: config.txt  result.csv
bench_avx2_double_2/: config.txt  result.csv
bench_avx2_double_4/: config.txt  result.csv
bench_avx2_int64_2/: config.txt  result.csv
bench_avx2_int64_4/: config.txt  result.csv
bench_laptop_double_4/: config.txt  result.csv
bench_power10_double_2/: config.txt  result.csv
bench_power10_double_4/: config.txt  result.csv
bench_power10_int64_2/: config.txt  result.csv
bench_power10_int64_4/: config.txt  result.csv
lib/: abstract_two_way_merge.hpp  cxxopts.hpp  simd_local_sort.hpp  simd_utils.hpp  two_way_merge.hpp
scripts/: benchmark.py
scripts/local_sort_benchmark/: plot.py
src/: abstract_two_way_merge.hpp  main.cpp  simd_basics.hpp  simd_local_sort.hpp  simd_merge_utils.hpp  simd_sort_utils.hpp  simd_sorting.cpp  sorting_avx2.cpp  two_way_merge.hpp
